# tend

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DESIGN.md  LICENSE  README.md  TODO.md  WEBSITE-live-data.md  WEBSITE.md  action.yaml
generator/: pyproject.toml
generator/src/continuous/: checks.py  cli.py  config.py  workflows.py
generator/src/tend/: checks.py  cli.py  config.py  migrate.py  workflows.py
generator/src/tend/templates/: ci-fix.yaml.j2  macros.yaml.j2  mention.yaml.j2  notifications.yaml.j2  (+3 more)
generator/tests/: __init__.py  _yaml.py  conftest.py  test_checks.py  test_config_edge_cases.py  test_generate.py  test_integration.py  test_migrate.py
generator/tests/_regtest_outputs/: test_generate.test_extras_apply_path_regtest.out  test_generate.test_fork_guard_rendered_shape_regtest[tend-ci-fix.yaml].out  test_generate.test_fork_guard_rendered_shape_regtest[tend-nightly.yaml].out  test_generate.test_fork_guard_rendered_shape_regtest[tend-notifications.yaml].out  test_generate.test_fork_guard_rendered_shape_regtest[tend-review-runs.yaml].out  test_generate.test_fork_guard_rendered_shape_regtest[tend-triage.yaml].out  test_generate.test_fork_guard_rendered_shape_regtest[tend-weekly.yaml].out  test_generate.test_install_test_workflow_regtest[claude].out  test_generate.test_install_test_workflow_regtest[codex].out  test_generate.test_notifications_minimal_regtest.out  test_generate.test_sandbox_levers_regtest.out  test_generate.test_workflow_minimal_codex_regtest[ci-fix].out  test_generate.test_workflow_minimal_codex_regtest[mention].out  test_generate.test_workflow_minimal_codex_regtest[nightly].out  test_generate.test_workflow_minimal_codex_regtest[notifications].out  test_generate.test_workflow_minimal_codex_regtest[review-runs].out  test_generate.test_workflow_minimal_codex_regtest[review].out  test_generate.test_workflow_minimal_codex_regtest[triage].out  test_generate.test_workflow_minimal_codex_regtest[weekly].out  test_generate.test_workflow_minimal_regtest[ci-fix].out  test_generate.test_workflow_minimal_regtest[mention].out  test_generate.test_workflow_minimal_regtest[nightly].out  test_generate.test_workflow_minimal_regtest[notifications].out  test_generate.test_workflow_minimal_regtest[review-runs].out  test_generate.test_workflow_minimal_regtest[review].out  test_generate.test_workflow_minimal_regtest[triage].out  test_generate.test_workflow_minimal_regtest[weekly].out  test_generate.test_workflow_with_setup_regtest[ci-fix].out  test_generate.test_workflow_with_setup_regtest[mention].out  test_generate.test_workflow_with_setup_regtest[nightly].out  test_generate.test_workflow_with_setup_regtest[notifications].out  test_generate.test_workflow_with_setup_regtest[review-runs].out  test_generate.test_workflow_with_setup_regtest[review].out  test_generate.test_workflow_with_setup_regtest[triage].out  test_generate.test_workflow_with_setup_regtest[weekly].out
(+174 files in other folders)
