[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tend"
version = "0.0.17"
description = "An autonomous junior maintainer for GitHub repos, powered by Claude — reviews PRs, triages issues, fixes CI"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Maximilian Roos", email = "m@maxroos.com" }]
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = ["click>=8.0", "pyyaml>=6.0"]

[project.scripts]
tend = "tend.cli:main"

[project.urls]
homepage = "https://github.com/max-sixty/tend"

[tool.hatch.build.targets.wheel]
packages = ["src/tend"]

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-regtest>=2.1.1", "pyyaml>=6.0.3"]
