[build-system]
requires = ["uv_build>=0.11.14,<0.12"]
build-backend = "uv_build"

[project]
name = "tend"
version = "0.1.1"
description = "An autonomous junior maintainer for GitHub repos, powered by Claude or OpenAI Codex — reviews PRs, triages issues, fixes CI"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Maximilian Roos", email = "m@maxroos.com" }]
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = ["click>=8.0", "jinja2>=3.1.6", "ruamel.yaml>=0.18"]

[project.scripts]
tend = "tend.cli:main"

[project.urls]
homepage = "https://github.com/max-sixty/tend"

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-regtest>=2.1.1"]
